# Frankenmandering

./: .gitignore  Gerry_Environment_5.ipynb  README.md
Code/: MCMC_Baseline.ipynb
Environment/: Gerry_Environment_10.ipynb  Gerry_Environment_13.ipynb  Gerry_Environment_17.ipynb  Gerry_Environment_4.ipynb  Inchworm_test.ipynb  Inchworm_test_2.ipynb  Inchworm_test_3.ipynb  __init__.py  gerry_environment.py  gerry_environment_12.py  gerry_environment_14.py  helpers_functions.py
Environment/Grids/: grid_config.yaml  grid_make_readme.md  init_graph_to_frankendata.py  make_grid.py  requirements.txt  test.py
Grids/: grid_config.yaml  grid_graphs.py  grid_make_readme.md  grid_quick_checks.py  init_graph_to_frankendata.py  make_grid.py  make_grid_2.py  make_grid_3.py  opinion_generator.py  requirements.txt
MCMC/: MCMC_Baseline_1.ipynb  MCMC_Baseline_3.ipynb
Test Results/: summary.docx
combined/: Gerry_Environment.ipynb  Inchworm_test.ipynb  Inchworm_test.py  MCMC_Baseline.ipynb  Test_MCMC_V2.ipynb  diff_norm_tests.py  drf_funcs.py  gerry_environment.py  gerry_revrecom.py  graph_initiator.py  inchworm_test.py  inchworm_test_MCMC.py  init_graph_to_frankendata.py  make_grid.py  mcmc_baseline.py  mcmc_v2.py  opinion_distribution.py  opinion_distribution_replay_metrics.py  opinion_distribution_utils.py  read_opinion_distribution.py  read_opinions_distributions.py  render_graph.py  report_gen.py  revrecom_connector.py  revrecom_test.py  sp_inchworm_render_graph.py  test_gerry_revrecom_generator.py
revrecom_py/: Cargo.toml  pyproject.toml
revrecom_py/src/: lib.rs
(+46 files in other folders)
